# TinyTensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/: Linear.h  MESLoss.h  Optimizer.h  SGD.h  TinyTensor.h  cuda_bridge.h  kernels.h  toolbox.h
src/: CMakeLists.txt  cuda_bridge.cu  hello_cuda.cu  kernels.cu
tests/: CMakeLists.txt  test_cpu.cpp  test_cuda.cu
